# codecrafters-shell-cpp

./: .gitignore  CMakeLists.txt  README.md
src/: builtins.cpp  builtins.hpp  environment.cpp  environment.hpp  main.cpp  utils.cpp  utils.hpp
src/builtins/: builtins.cpp  builtins.hpp
src/builtins/cd/: cd.cpp  cd.hpp
src/builtins/echo/: echo.cpp  echo.hpp
src/builtins/exit/: exit.cpp  exit.hpp
src/builtins/pwd/: pwd.cpp  pwd.hpp
src/builtins/type/: type.cpp  type.hpp
src/command_parser/: command_parser.cpp  command_parser.hpp
src/environment/: environment.cpp  environment.hpp
src/prompt_reader/: prompt_reader.cpp  prompt_reader.hpp
src/utils/: utils.cpp  utils.hpp
